<resources>
    <string name="app_name">深蓝互联+</string>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Year">Y</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_again">重新添加</string>
    <string name="add_device">添加设备</string>
    <string name="about">关于</string>
    <string name="add_device_failed">添加失败</string>
    <string name="add_device_success">添加成功</string>
    <string name="add_device_tip">账号未登陆，该设备不可添加，请去用户中心登陆账号后再添加该设备</string>
    <string name="alert_dialog_dim_amount">0.4f</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="areaid">域</string>
    <string name="begin_games">开始游戏</string>
    <string name="big_ice">大冰</string>
    <string name="bluetooth_is_turned_off">蓝牙已关闭</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_loading">加载中...</string>
    <string name="bx_boot">开机</string>
    <string name="bx_close_timing">关闭</string>
    <string name="bx_cooling">制冷</string>
    <string name="bx_customize_duration">自定义</string>
    <string name="bx_eco">ECO</string>
    <string name="bx_hot">制热</string>
    <string name="bx_hour">小时</string>
    <string name="bx_is_close">冰箱已停用</string>
    <string name="bx_max">MAX</string>
    <string name="bx_minute">分钟</string>
    <string name="bx_out_car_work">离车工作</string>
    <string name="bx_out_car_work_ps">（离车锁车后,冰箱继续工作时长设定）</string>
    <string name="bx_shutdown">关机</string>
    <string name="bx_six_hour">6小时</string>
    <string name="bx_three_hour">3小时</string>
    <string name="bx_twelve_hour">12小时</string>
    <string name="bx_work_mode">工作模式</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">取消</string>
    <string name="cancel_add_device">取消添加</string>
    <string name="cancel_add_title_dialog">设备未添加完成，退出本页面将放弃添加，是否继续？</string>
    <string name="cancel_connect">取消连接</string>
    <string name="cancel_connect_xyb">取消匹配</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="connect_device">连接设备</string>
    <string name="connect_device_xyb">立即匹配</string>
    <string name="connect_failed">连接失败</string>
    <string name="connect_failed_xyb">匹配失败</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_success_xyb">匹配成功</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="del_device">删除设备</string>
    <string name="device_add_title">设备连接提示</string>
    <string name="device_connected">已连接</string>
    <string name="device_not_connect">未连接</string>
    <string name="device_not_connected">设备未连接</string>
    <string name="device_not_connected_excep">This device not connect!</string>
    <string name="device_not_connected_no_xyb">设备未连接\n请检查接口连接状态</string>
    <string name="device_not_connected_xyb">设备待匹配</string>
    <string name="digital_humans">数字人</string>
    <string name="digital_people_1">嘘</string>
    <string name="digital_people_2">难以入眠</string>
    <string name="digital_people_3">星海</string>
    <string name="disconnect">断开连接</string>
    <string name="dj_app_not_installed">大疆无人机应用未安装</string>
    <string name="dj_wrj_default_name">大疆无人机</string>
    <string name="dj_wrj_mimi2_name">大疆Mini2</string>
    <string name="dj_wrj_mimi3_name">大疆Mini3</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="dynamic_stickers">妥妥贴</string>
    <string name="dynamic_stickers_tips">自定义妥妥贴功能，便捷控制车辆状态</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="finding_device">正在搜索附近设备…</string>
    <string name="finding_devices">请勿关闭设备，并保持设备在车附近</string>
    <string name="finding_devices_xyb">请勿断开设备连接</string>
    <string name="funcid">功能ID</string>
    <string name="gamepads">游戏手柄</string>
    <string name="go_on">继续</string>
    <string name="go_to_login">去登录账号</string>
    <string name="gucci_bamboo">古驰青竹</string>
    <string name="headrest_audio">头枕音响</string>
    <string name="headrest_audio_is_enabled">头枕音响已启用</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="ice">制冰机</string>
    <string name="ice_making">制冰中</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="item_view_role_description">Tab</string>
    <string name="little_ice">小冰</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="m3c_bottom_sheet_collapse_description">Collapse bottom sheet</string>
    <string name="m3c_bottom_sheet_dismiss_description">Dismiss bottom sheet</string>
    <string name="m3c_bottom_sheet_drag_handle_description">Drag handle</string>
    <string name="m3c_bottom_sheet_expand_description">Expand bottom sheet</string>
    <string name="m3c_bottom_sheet_pane_title">Bottom Sheet</string>
    <string name="m3c_date_input_headline">Entered date</string>
    <string name="m3c_date_input_headline_description">Entered date: %1$s</string>
    <string name="m3c_date_input_invalid_for_pattern">Date does not match expected pattern: %1$s</string>
    <string name="m3c_date_input_invalid_not_allowed">Date not allowed: %1$s</string>
    <string name="m3c_date_input_invalid_year_range">Date out of expected year range %1$s - %2$s</string>
    <string name="m3c_date_input_label">Date</string>
    <string name="m3c_date_input_no_input_description">None</string>
    <string name="m3c_date_input_title">Select date</string>
    <string name="m3c_date_picker_headline">Selected date</string>
    <string name="m3c_date_picker_headline_description">Current selection: %1$s</string>
    <string name="m3c_date_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="m3c_date_picker_no_selection_description">None</string>
    <string name="m3c_date_picker_scroll_to_earlier_years">Scroll to show earlier years</string>
    <string name="m3c_date_picker_scroll_to_later_years">Scroll to show later years</string>
    <string name="m3c_date_picker_switch_to_calendar_mode">Switch to calendar input mode</string>
    <string name="no_device_tips">您可以使用手机app“深蓝汽车”购买“小仪表”、“妥妥贴”等设备后添加设备</string>
    <string name="user_agreement_agree">同意</string>
    <string name="user_agreement_exit">退出</string>
    <string name="user_agreement_have_read">已阅读并同意以上内容</string>
    <string name="user_agreement_title">深蓝互联+隐私政策</string>
</resources>